# Time-Helper

./: .gitignore  GEMINI.md  LICENSE  Taskfile.yml  flake.nix  pyproject.toml  readme.md  test_time_helper.py
.github/: copilot-instructions.md
.github/agents/: quick_change.agent.md
.github/workflows/: build.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/error_handling_improvements_20260112/: metadata.json  plan.md  spec.md
conductor/archive/weekly_report_customization_20260109/: metadata.json  plan.md
conductor/tracks/nix_ai_integration_20260109/: metadata.json  plan.md  spec.md
conductor/tracks/weekly_report_customization_20260109/: plan.md  spec.md
tests/: test_basic.py  test_config.py  test_database_filtering.py  test_error_handling.py  test_exceptions.py  test_report_commands.py  test_report_commands_formats.py  test_report_commands_logic.py  test_report_generator_csv.py  test_report_generator_filtering.py  test_report_generator_markdown.py  test_utils.py
time_helper/: __init__.py  __main__.py  cli.py  colors.py  config.py  database.py  exceptions.py  logging_config.py  models.py  report_generator.py  week_utils.py
time_helper/cli/: __init__.py  annotate_commands.py  config_commands.py  database_commands.py  report_commands.py  summary_commands.py  timer_commands.py  utils.py
