[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "time-helper"
version = "0.1.0"
description = "Automated time tracking export and reporting tool"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.8.0",
    "loguru>=0.7.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
time-helper = "time_helper.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "mypy>=1.10.0",
    "pyinstaller>=6.0.0",
]
